# agent-channel-bridge

./: .dockerignore  .gitignore  AGENTS.default.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  architecture.html  bridge.py  bridge.sh  config.template.yaml  config.yaml  package-lock.json  package.json  pyproject.toml  restart_bridge.sh  watchdog_bridge.sh
src/agent_channel_bridge/: __init__.py  __main__.py  acp_worker.py  acp_wrapper_claude_sdk.mjs  config.py  onebot.py  rpc_log.py  worker_manager.py
tests/: test_bridge.py
