[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-channel-bridge"
version = "1.0.0"
description = "将QQ消息无缝路由到AI Coding Agent（OpenCode/Claude Code），通过ACP协议实现流式通信和session持久化"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "MrToy", email = "mr.toy@example.com"},
]
keywords = ["qq-bot", "ai-agent", "onebot", "napcat", "acp-protocol", "opencode", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "websockets>=10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/MrToy/agent-channel-bridge"
Repository = "https://github.com/MrToy/agent-channel-bridge"
Issues = "https://github.com/MrToy/agent-channel-bridge/issues"

[project.scripts]
agent-channel-bridge = "agent_channel_bridge.__main__:entry"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_channel_bridge*"]

[tool.setuptools.package-data]
agent_channel_bridge = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
fix = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
